--- a/style/cafe.css
+++ b/style/cafe.css
@@ -372,7 +372,7 @@ td{
     }
     .header-txt h1{
         /* position: relative; */
-        font-size: 90px;
+        font-size: 80px;
     }
     .header-txt p{
         padding: 0;
@@ -383,4 +383,66 @@ td{
         flex-direction: column;
         /* position: relative; */
     }
+    .dir p {
+        font-size: 18px;
+    }
+    .welcome{
+        flex-direction: column;
+    }
+    .welcome-1{
+        display: none;
+    }
+    .welcome-2{
+        width: 100%;
+        padding: 30px;
+        text-align: center;
+    }
+    h2{
+        font-size: 40px;
+        line-height: 80px; 
+    }
+    p{
+        margin: 15px 0;
+    }
+    .services{
+        padding: 30px;
+    
+    }
+    .services-txt p {
+        padding: 0;
+    }
+    .services-group{
+        flex-direction: column;
+        margin: 0;
+    }
+    .services-1{
+        margin: 0 0 20px 0;
+    }
+    .prices{
+        flex-direction: column;
+    }
+    .prices-1 {
+        width: 100%;
+        padding: 30px;
+        text-align: center;
+    }
+    table {
+        margin: 25px 0 0 0;
+    }
+    .prices-2 {
+        display: none;
+    }
+    .personal{
+        padding: 30px;
+    } 
+    .personal-group{
+        flex-direction: column;
+        margin-bottom: 0;
+    }
+    .personal-1{
+         margin-bottom: 25px;
+    }
+ 
+  
 }
+
