--- a/style/cafe.css
+++ b/style/cafe.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;700&family=Playfair+Display&family=Ysabeau:wght@1;300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600;800&family=Dancing+Script&family=Montserrat:wght@100;300;700&family=Playfair+Display&family=Ysabeau:wght@1;300&display=swap');
-/* font-family: 'Dancing Script', cursive; */
 
 *{
    margin: 0;
@@ -14,12 +13,19 @@ body{
     background-color: #C38154;
   
 }
+
+html{
+    scroll-behavior: smooth;
+}
 .container{
     max-width: 1200px;
     margin: 0 auto;
 }
+
+
+/* /////////css para el header///////// */
 .header{
-    /* background: black; */
+  
     background-image: url(/images/fondo-header.jpg);
     background-position: center center ;
     background-repeat: no-repeat;
@@ -36,27 +42,12 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #2409022c;
     z-index: 1000;
     width: 100%;
-    /* margin: 0; */
-    /* height: 100px; */
-    /* background: #884A39;
-    border: 1px solid #282828;*/
+  
    
 }
-.logo{
-    font-size: 24px;
-    color: #EEC373;
-    font-weight: 700;
-    text-transform: uppercase;
-}
-.logo img{
-    margin-left: 35px;
-    width: 55px;
-    height: 50px;
-    position: relative;
-}
+
 .menu .navbar ul li {
     position: relative;
     float: left;
@@ -64,13 +55,15 @@ body{
 .menu .navbar ul li a {
     font-size: 18px;
     padding: 20px;
-    color: aqua;
+    color: #EAC696;
+    margin-top: 15px;
     display: block;
-    font-weight: bold;
+    transition: 1s;
+
 }
 .menu .navbar ul li a:hover{
-    color: azure;
-    transition: 2s;
+    color: aliceblue;
+    transition: 1s;
     background: transparent;
 }
 #menu{
@@ -86,50 +79,47 @@ body{
 .header-txt{
     text-align: center;
     margin-bottom: 45px;
-    /* position: relative; */
+   
 }
 .header-txt h1, h3 {
     font-size: 110px;
-    /* position: relative; */
     letter-spacing: 3px;
     text-transform: uppercase;
     font-family: 'Cinzel', serif;
     color: #C38154;
-    margin-top: 50px;
+    margin-top: 70px;
     margin-bottom: 15px;
 }
 #manu-cafe{
     color: aqua;
 }
 .header-txt p{
-   color: aqua;
-   padding: 0 250px;
-   margin: 25px 0;
+    color: #EAC696;
+    background: #00000040;
+    padding: 0 250px;
+    margin: 25px 0;
 }
 
 .btn-1{
     display: inline-block;
     padding: 11px 25px;
-    background-color: #884A39;
-    color: #FFC26F;
+    background-color: #865439;
+    color: #EAC696;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-size: 20px;
-    font-family: 'Montserrat', sans-serif;
     margin: 25px 0;
-   border: 0;
+    transition: 1s;
 }
 .btn-1:hover {
-    background-color: #FFC26F;
-    color: #884A39;
-    font-family: 'Montserrat', sans-serif;
-    transition: 3s;
+    background-color: #EAC696;
+    color: #865439;
+    transition: 1s;
   
 }
 .header-dir{
     background: black;
     display: flex;
-    /* position: relative; */
     justify-content: space-between;
     text-align: center;
     margin-top: 20px;
@@ -140,9 +130,10 @@ body{
 }
 .dir p {
     font-size: 22px;
-    color: #EEC373;
+    color: #EAC696;
     text-transform: uppercase;
 }
+/* /////////css para el welcome///////// */
 .welcome {
     display: flex;
 }
@@ -161,24 +152,30 @@ body{
 h2{
     font-size: 70px;
     line-height: 100px;
-    color: #FFC26F;
+    color: #EAC696;
     text-transform: uppercase;
     font-family: 'Cinzel', serif;
     margin-bottom: 20px;
     
 }
+.titulo-cafe{
+    font-size: 70px;
+    line-height: 100px;
+    color: #884A39;
+    text-transform: uppercase;
+    font-family: 'Cinzel', serif;
+    margin-bottom: 20px;
+}
 p {
     font-size: 18px;
-    color: #282828;
-    /* font-weight: 600; */
+    color: #000000;
     margin: 25px 0;
 }
 .b1{
-    color: #282828;
-    /* font-weight: 600;
-    font-size: 18px;
-    margin: 25px 0; */
+    color: #000000;
+  
 }
+/* /////////css para el services///////// */
 .services {
     padding: 100px 0;
     text-align: center;
@@ -207,12 +204,11 @@ hr{
 .services-1{
     background-color: #FFC26F;
     padding: 35px 25px;
-    /* width: 30%; */
     margin: 0 10px;
     border-radius: 15px;
 }
 .services-1 img{
-    width: 25px;
+    width: 50px;
     margin-bottom: 15px;
 }
 .services-1 h3{
@@ -225,7 +221,7 @@ hr{
     font-weight: 600;
     font-size: 18px;
 }
-
+/* /////////css para el prices///////// */
 .prices{
     display: flex;
 }
@@ -247,7 +243,7 @@ tr{
     margin-bottom: 20px;
 }
 th{
-    color: #EEC373;
+    color: #EAC696;
     padding-bottom:15px;
 }
 td{
@@ -260,15 +256,14 @@ td{
     background-size: cover;
     width: 50%;
 }
+/* /////////css para el personal///////// */
 .personal{
     padding: 100px 0;
     text-align: center;
     background: #C38154;
    
 }
-/* .personal-h2{
-   color: #884A39;
-} */
+
 .personal-txt{
    display: flex;
    flex-direction: column;
@@ -276,11 +271,7 @@ td{
    text-align: center;
    margin-bottom: 25px;
 }
-/* .personal-div{
-   width: 310px;
-   height: 240px;
-   margin: 0 auto;
-} */
+
 .personal-group{
    display: flex;
    justify-content: space-between;
@@ -288,7 +279,7 @@ td{
 }
 .personal-1{
    text-align: center;
-   /* margin: 15px; */
+  
    
 }
 .personal-1 img{
@@ -297,11 +288,7 @@ td{
     border: solid 1px #865439;
     border-radius: 15px;
     margin-bottom: 25px;
-   /* width: 250px; */
-   /* height: 90%;
-   border: solid 1px #865439; */
-   /* border-radius: 15px;
-   margin-bottom: 25px; */
+
    
 }
 .personal-1 h3{
@@ -316,6 +303,7 @@ td{
 .personal-1 a{
    color: #F9E0BB;
 }
+/* /////////css para el footer///////// */
 .footer-txt{
     width: 100%;
     background: #282828;
@@ -336,7 +324,7 @@ td{
     height: 40px;
     margin: 20px;
 }
-
+/* /////////css para el media///////// */
 @media(max-width:991px) {
     .menu{
         padding: 20px;
@@ -360,28 +348,28 @@ td{
     }
     .header {
         min-height: 0vh;
-        /* position: relative; */
+     
     }
     .header-content {
         padding: 80px 30px 50px 30px;
-        /* position: relative; */
+        
     }
     .header-txt{
         margin-bottom: 15px;
-        /* position: relative; */
+       
     }
     .header-txt h1{
-        /* position: relative; */
+        
         font-size: 80px;
     }
     .header-txt p{
         padding: 0;
-        /* position: relative; */
+       
         margin: 15px 0;
     }
     .header-dir{
         flex-direction: column;
-        /* position: relative; */
+       
     }
     .dir p {
         font-size: 18px;
